--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install cuda
-        uses: Jimver/cuda-toolkit@v0.2.15
-        id: cuda-toolkit
-        with:
-          cuda: '12.1.0'
-      - run: nvcc -V
+      #- name: Install cuda
+      #  uses: Jimver/cuda-toolkit@v0.2.15
+      #  id: cuda-toolkit
+      #  with:
+      #    cuda: '12.1.0'
+      #- run: nvcc -V
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -32,8 +32,8 @@ jobs:
           pip install sparse_dot_mkl
           pip install wget
           pip install tensorflow
-          pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu121
-          pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-1.13.0+cu121.html
+          pip install torch torchvision torchaudio
+          pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-2.3.0+cpu.html
           pip install pytest
           pip install pytest-cov
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
