--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,11 +9,11 @@ jobs:
         python-version: [3.11]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          architecture: 'x64'
       #- name: Install cuda
       #  uses: Jimver/cuda-toolkit@v0.2.15
       #  id: cuda-toolkit
