--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install coverage-badge
           pip install scikit-learn
           pip install scipy
           pip install numpy
@@ -42,17 +43,8 @@ jobs:
           pytest -x --cov=pygrank --cov-report=xml tests/test_autorefs.py tests/test_core.py tests/test_measures.py tests/test_filters.py tests/test_autotune.py tests/test_filter_optimization.py tests/test_gnn.py tests/test_postprocessing.py tests/test_benchmarks.py tests/test_fairness.py tests/test_preprocessor.py
       - name: Generate coverage badge
         run: coverage-badge -o coverage.svg -f
-      - name: Commit coverage badge
-        if: ${{ matrix.python-version == '3.11' }}
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add coverage.svg
-          if [ -n "$(git status --porcelain)" ]; then
-            git commit -m 'Updated coverage badge'
-            git push
-          else
-            echo "No changes in coverage to commit"
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload coverage badge
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-badge
+          path: coverage.svg
